# hse-mlops-hw1

./: Dockerfile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml
example_data/: titanic_test.xlsx  titanic_test_incomplete.xlsx  titanic_test_with_nan.xlsx  titanic_train.xlsx
mlops/: app.py  app_contoller.py  app_model.py  data.py  error_protocol.py  ml_models.py  models.py
models/: logistic_regression.pkl  logistic_regression_C_1_max_iter_100.pkl  model.pkl  svm.pkl
testing/: app_model.py
