[tool.poetry]
name = "hse-mlops-hw1"
version = "0.1.0"
description = ""
authors = ["AndBoyS <andboyxd@gmail.com>"]
readme = "README.md"
packages = [{include = "hse_mlops_hw1"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
scikit-learn = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
