[tool.poetry]
name = "hse-mlops-hw1"
version = "0.1.0"
description = ""
authors = ["AndBoyS <andboyxd@gmail.com>"]
readme = "README.md"
packages = [{include = "hse_mlops_hw1"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.1.2"
scikit-learn = "^1.1.2"
flask-restx = "^0.5.1"
Werkzeug = "2.1.2"
pandas = "^1.5.1"
xlrd = "^2.0.1"
openpyxl = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
